--- a/Wedding-Website-Template-main/index.html
+++ b/Wedding-Website-Template-main/index.html
@@ -128,6 +128,8 @@
             <button class="choice-btn" onclick="showSection('groom')">Егор и его семья</button>
             <!-- Кнопка для показа секции жениха -->
         </div>
+		<img class="img-over flower-top-left" src="C:/Users/user/Documents/FamilyBeginsWithYou/FamilyBeginsWithYou/Wedding-Website-Template-main/assets/фоновый цветочек.png" alt="Decorative flower">
+		<!-- <img class="img-over butterfly-right" src="C:/Users/user/Documents/FamilyBeginsWithYou/FamilyBeginsWithYou/Wedding-Website-Template-main/assets/Бабочка.png" alt="Decorative butterfly"> -->
     </section>
 
     <section class="timeline-section">
