--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 	
     
 <audio id="bg-music" src="assets/музыка.mp3" loop></audio>
-     <script src="C:\Users\FakTo\Downloads\Wedding-Website-Template-main\Wedding-Website-Template-main\script.js"></script>
+     <script src="script.js"></script>
 
 </body>
 
