--- a/index.html
+++ b/index.html
@@ -216,8 +216,7 @@
 <!-- Финальный экран истории Даши -->
 <section class="hero" style="position: relative;">
     <img class="img-over img-bottom img-right slide-in-blurred-br dur-2" 
-         src="assets/colibri.png" 
-         style="width: 330px; height: auto; bottom: 10px; right: 10px;">
+         src="assets/colibri.png">
     <div style="margin-top: -130px;"> <!-- сдвигаем текст вверх, уменьшая отступ сверху -->
         <h1 style="font-size: 20px; line-height: 1.5;">
             Я выросла в любви и заботе, которыми меня окружали с самого первого дня. 
@@ -361,8 +360,7 @@
 
 <section class="hero" style="position: relative;">
     <img class="img-over img-bottom img-right slide-in-blurred-br dur-2" 
-         src="assets/Pappagalli.png" 
-         style="width: 310px; height: auto; bottom: 10px; right: 10px;">
+         src="assets/Pappagalli.png">
     <div style="margin-top: 40px;">
         <h1 class="bigtext">
             Мама, папа,<br>
