--- a/index.html
+++ b/index.html
@@ -334,16 +334,16 @@
 			<div class="image-wrapper">
 				<img src="assets/Егор/Шахтеры.jpg" alt="Мама и Егор в касках">
 			</div>
-			<!-- <p>Вы научили меня улыбаться, даже когда впереди что-то неизвестное. И всегда верить в лучшее.</p>
-		<!-- </div>
+			 <p>Вы научили меня улыбаться, даже когда впереди что-то неизвестное. И всегда верить в лучшее.</p>
+		 </div>
 
-		<!-- <!-- 12. Взрослый 
-		<!-- <div class="fairy-slide" data-glow-color="rgba(255, 215, 0, 0.4)">
-			<!-- <div class="image-wrapper">
-				<!-- <img src="assets/Егор/Взрослый.jpg" alt="Егор взрослый">
-			<!-- </div>
-			<!-- <p>Вы вели меня через каждый этап жизни — от первых шагов до этого момента, когда я стою взрослым, сильным и готовым к своему пути. Всё, чем я стал, — это ваша любовь, ваш труд и ваше сердце.</p>
-		<!-- </div>
+		<!-- 12. Взрослый -->
+		 <div class="fairy-slide" data-glow-color="rgba(255, 215, 0, 0.4)">
+			 <div class="image-wrapper">
+				<img src="assets/Егор/Взрослый.jpg" alt="Егор взрослый">
+			 </div>
+			<p>Вы вели меня через каждый этап жизни — от первых шагов до этого момента, когда я стою взрослым, сильным и готовым к своему пути. Всё, чем я стал, — это ваша любовь, ваш труд и ваше сердце.</p>
+		</div>
  
    <!-- Control buttons -->
     <div class="control-buttons">
